--- a/Literature_review.tex
+++ b/Literature_review.tex
@@ -4,12 +4,15 @@
 \maketitle
 
 
+\section{Papers related to Ideal Point Models}
+
 \begin{enumerate}
 \item “The ideological mapping of American legislatures”. B Shor, N McCarty - American Political Science Review, 2011 - cambridge.org (cited by 652)
 \begin{itemize}
 \item Empirical applications of spatial theory to state politics have been limited by two important factors. The first is that roll call voting data over time have not been collected for all 50 states. The second impediment is that because ideal points are latent quantities, direct comparisons across states or even between chambers within the same state are generally difficult to make. 
 \item The conjunction of these two problems reduces the scope of spatial theory in state politics to a choice between examining within-state variation for a handful of states or making dubious comparisons on a cross section of states. 
 \item In this article, we tackle both these potential problems with state-level applications of the spatial model. First, we introduce a new data set of state legislative roll call votes that covers all state legislative bodies over approximately a decade. Second, we employ a new strategy to establish comparability of estimates across chambers, across states, and across time. Here we use a survey of legislative candidates at the state and federal levels over a number of years. Importantly, the survey questions are asked in an identical form across states, and many questions are repeated over time. The survey allows us to make cross-state, cross-chamber, and over-time comparisons. 
+\item For each state, we estimate one- and two-dimensional spatial models using the Bayesian item response model.We beginwith an examination of the predictive power of the spatial model for explaining patterns of roll call voting within each state
 \item In particular, our spatial mapping not only adds a much needed cross-sectional element to empirical work on legislative institutions, but also will allow scholars to exploit institutional variation in ways not previously possible. 
 \item Identification of the models relies on the existence of bridge actors who cast votes (or make votelike decisions) in multiple settings. 
 \item Given the limitations of using bridge legislators to link states, we use the Project Vote Smart National Political Awareness Test (NPAT), a survey of state and federal legislative candidates. 
@@ -88,43 +91,6 @@
 \item The authors test the EM model versus different known model of MCMC and present their results along with an empirical application. 
 \end{itemize}
 
-
-
-
-\newpage
-
-
-\item “Lobbying, Campaign Contributions and Political Competition” J Rivas - 2017   
-
-\item (Question: Is there anything about uncertainty in this paper?)
-\item Answer: There is, the second and third bullet point has an overview of the way the paper treats uncertainty. 
-
-\begin{itemize}
-\item The purpose of this paper is to study how lobbying affects elections where candidates that are running for office can benefit from the funds offered by the lobbies in an exchange for adopting a political position favorable to these lobbies but different from that of the median voter.
-\item we show that uncertainty about the voter’s behavior will increase polarization only for the party that gets offered the contract from the higher valuation lobby while it will decrease the polarization of the other party. This is because as uncertainty about the voter goes up adopting a more polarized position becomes less risky. The high valuation lobby takes advantage of this by asking its party for a more polarized position while the low valuation lobby instead allows its party to become less polarized to be in a better position against the now more polarized opposing party.
-\item we obtain that uncertainty about the voter also increases the relative spending of the party associated with the high valuation lobby. This is because, as discussed in the previous paragraph, increasing uncertainty increases the polarization of the party associated with the high valuation lobby, which implies that now this lobby has to compensate its party by offering more funds proportional to the funds the other lobby offers.
-\item From the point of view of welfare measured as the utility of the median voter, we find among others that competition between lobbies, i.e. when both have similar valuations, minimizes welfare. 
-\item The model described above (previous paragraph in the paper) leads to a two stage four player Bayesian game where in the first stage each lobby simultaneously offers a contract to a different party, then in the second stage parties simultaneously and without knowing the contract offered to the other party decide whether to accept or to reject the contract. In a final stage which party wins the election is declared and its policy position implemented. We solve this game by finding its unique equilibrium and then we proceed to study how the different parameters in the model affect parties’ polarization, campaign spending, and voter’s welfare. 
-\item In our results about polarization we find, among others, that the lobby that has a higher stake in the election (the high valuation lobby henceforth) forces its party to adopt a more polarized position than the other party. Although a more polarized position decreases voter support, this can be partly compensated by a higher campaign spending, which the high valuation lobby is willing to fund. 
-\item In terms of campaign spending, we find that the higher valuation lobby will contribute more to campaign spending. Furthermore, we also find that the salience of the election decreases total campaign spending but increases the relative campaign spending of the party associated with the high valuation lobby (relative to the other party’s campaign spending). 
-\item From the point of view of welfare measured as the utility of the median voter, we find among others that competition between lobbies, i.e. when both have similar valuations, minimizes welfare. 
-\item This is a Bayesian game model, do not use data, only the Bayesian Equilibrium solution concept to characterize the model.  
-
-\end{itemize}
-
-
-\newpage
-
-
-\item “Incumbent Competition, Decision-making, and Policy Choice” AM Go - 2019   
-
-\begin{itemize}
-\item We approach the lobbying process as one where cash-for-favour exchanges occur as a means to obtain access to legislators. The model takes into account the \textbf{degree of uncertainty} on a non-strategic legislator’s preference, the legislator’s level of integrity, and the perceived advantages each lobbyist may have on their respective policies. Instead, we adopt a simultaneous lobbying structure to capture how lobbying proceeds behind closed doors.
-\item In this paper, we find that the degree of uncertainty of legislator preferences, given by the length of the bias intervals, directly affects the bidding strategy of lobbyists. At low levels of uncertainty, lobbyists bid aggressively. The bias of the legislator is not high enough to risk losing the legislator’s support. 
-\item We explore \textbf{uncertainty} by focusing on lobbyist behavior when faced with uncertain legislator preferences similar to Buzard and Saiegh (2016) and Dekel et al. (2006).  However, uncertainty is rarely explored on its own. We redirect the focus of the paper to lobbyist interactions over one non-strategic legislator. We remove the dimension of budget allocation and instead assume that the lobbyists are willing to pay at most the value of the legislator support. The results show that uncertainty on its own can provide some good insights on how lobbying unfolds. 
-\item We also include a measure of the legislator’s level of integrity. As with Che and Gale (1998), the politician does not hold an open sale for his support given restrictions on vote buying. We can think about this from the perspective of a reputation conscious politician. A reputation conscious politician may not want to be associated with more than one lobbying group for an issue, and would like to be viewed as consistent and honest by her constituents. The more controversial an issue is, the more likely it is for the politician’s threshold to be higher. 
-
-\end{itemize}
 
 \newpage
 
@@ -248,6 +214,41 @@ ranks of Democrats is much larger than that of Republicans). As a consequence, c
 
 \end{itemize}
 
+
+\newpage
+
+
+\section{Papers not related to Ideal Point Models}
+
+\item “Lobbying, Campaign Contributions and Political Competition” J Rivas - 2017   
+
+\begin{itemize}
+\item The purpose of this paper is to study how lobbying affects elections where candidates that are running for office can benefit from the funds offered by the lobbies in an exchange for adopting a political position favorable to these lobbies but different from that of the median voter.
+\item we show that uncertainty about the voter’s behavior will increase polarization only for the party that gets offered the contract from the higher valuation lobby while it will decrease the polarization of the other party. This is because as uncertainty about the voter goes up adopting a more polarized position becomes less risky. The high valuation lobby takes advantage of this by asking its party for a more polarized position while the low valuation lobby instead allows its party to become less polarized to be in a better position against the now more polarized opposing party.
+\item we obtain that uncertainty about the voter also increases the relative spending of the party associated with the high valuation lobby. This is because, as discussed in the previous paragraph, increasing uncertainty increases the polarization of the party associated with the high valuation lobby, which implies that now this lobby has to compensate its party by offering more funds proportional to the funds the other lobby offers.
+\item From the point of view of welfare measured as the utility of the median voter, we find among others that competition between lobbies, i.e. when both have similar valuations, minimizes welfare. 
+\item The model described above (previous paragraph in the paper) leads to a two stage four player Bayesian game where in the first stage each lobby simultaneously offers a contract to a different party, then in the second stage parties simultaneously and without knowing the contract offered to the other party decide whether to accept or to reject the contract. In a final stage which party wins the election is declared and its policy position implemented. We solve this game by finding its unique equilibrium and then we proceed to study how the different parameters in the model affect parties’ polarization, campaign spending, and voter’s welfare. 
+\item In our results about polarization we find, among others, that the lobby that has a higher stake in the election (the high valuation lobby henceforth) forces its party to adopt a more polarized position than the other party. Although a more polarized position decreases voter support, this can be partly compensated by a higher campaign spending, which the high valuation lobby is willing to fund. 
+\item In terms of campaign spending, we find that the higher valuation lobby will contribute more to campaign spending. Furthermore, we also find that the salience of the election decreases total campaign spending but increases the relative campaign spending of the party associated with the high valuation lobby (relative to the other party’s campaign spending). 
+\item From the point of view of welfare measured as the utility of the median voter, we find among others that competition between lobbies, i.e. when both have similar valuations, minimizes welfare. 
+\item This is a Bayesian game model, do not use data, only the Bayesian Equilibrium solution concept to characterize the model.  
+
+\end{itemize}
+
+
+\newpage
+
+
+
+\item “Incumbent Competition, Decision-making, and Policy Choice” AM Go - 2019   
+
+\begin{itemize}
+\item We approach the lobbying process as one where cash-for-favour exchanges occur as a means to obtain access to legislators. The model takes into account the \textbf{degree of uncertainty} on a non-strategic legislator’s preference, the legislator’s level of integrity, and the perceived advantages each lobbyist may have on their respective policies. Instead, we adopt a simultaneous lobbying structure to capture how lobbying proceeds behind closed doors.
+\item In this paper, we find that the degree of uncertainty of legislator preferences, given by the length of the bias intervals, directly affects the bidding strategy of lobbyists. At low levels of uncertainty, lobbyists bid aggressively. The bias of the legislator is not high enough to risk losing the legislator’s support. 
+\item We explore \textbf{uncertainty} by focusing on lobbyist behavior when faced with uncertain legislator preferences similar to Buzard and Saiegh (2016) and Dekel et al. (2006).  However, uncertainty is rarely explored on its own. We redirect the focus of the paper to lobbyist interactions over one non-strategic legislator. We remove the dimension of budget allocation and instead assume that the lobbyists are willing to pay at most the value of the legislator support. The results show that uncertainty on its own can provide some good insights on how lobbying unfolds. 
+\item We also include a measure of the legislator’s level of integrity. As with Che and Gale (1998), the politician does not hold an open sale for his support given restrictions on vote buying. We can think about this from the perspective of a reputation conscious politician. A reputation conscious politician may not want to be associated with more than one lobbying group for an issue, and would like to be viewed as consistent and honest by her constituents. The more controversial an issue is, the more likely it is for the politician’s threshold to be higher. 
+
+\end{itemize}
 
 \end{enumerate}
 
